@@ -58,6 +58,14 @@ config.o: config.c
 	$(CC) $(CFLAGS) -S config.c -o config.s
 	$(ASM) config.s -o config.o
 
+font.o: font.c
+	$(CC) $(CFLAGS) -S font.c -o font.s
+	$(ASM) font.s -o font.o
+
+graphics.o: graphics.c
+	$(CC) $(CFLAGS) -S graphics.c -o graphics.s
+	$(ASM) graphics.s -o graphics.o    
+    
 malloc.o: malloc.c
 	$(CC) $(CFLAGS) -S malloc.c -o malloc.s
 	$(ASM) malloc.s -o malloc.o
@@ -66,25 +74,21 @@ menu.o: menu.c
 	$(CC) $(CFLAGS) -S menu.c -o menu.s
 	$(ASM) menu.s -o menu.o
 
-font.o: font.c
-	$(CC) $(CFLAGS) -S font.c -o font.s
-	$(ASM) font.s -o font.o
-
-graphics.o: graphics.c
-	$(CC) $(CFLAGS) -S graphics.c -o graphics.s
-	$(ASM) graphics.s -o graphics.o
+utils.o: utils.c
+	$(CC) $(CFLAGS) -S utils.c -o utils.s
+	$(ASM) utils.s -o utils.o
 
 menu: menu.o graphics.o font.o sdk_hbl.o linker_menu.x debug.o lib.o
 	$(PSPDEV)/bin/psp-ld -T linker_menu.x -L$(PSPSDK)/lib menu.o graphics.o font.o lib.o sdk_hbl.o debug.o -o menu.elf
 	$(PSPDEV)/bin/psp-strip -s menu.elf
 	$(PSPDEV)/bin/psp-objcopy -O binary menu.elf menu.bin    	
     	
-hbl: eloader.o elf.o thread.o memory.o lib.o sdk_hbl.o debug.o config.o modmgr.o syscall.o malloc.o graphics.o font.o linker_hbl.x
-	$(PSPDEV)/bin/psp-ld -T linker_hbl.x -L$(PSPSDK)/lib eloader.o elf.o thread.o syscall.o memory.o lib.o sdk_hbl.o debug.o config.o modmgr.o malloc.o graphics.o font.o -o eloader.elf
+hbl: eloader.o elf.o thread.o memory.o lib.o sdk_hbl.o debug.o config.o modmgr.o syscall.o malloc.o graphics.o font.o utils.o linker_hbl.x
+	$(PSPDEV)/bin/psp-ld -T linker_hbl.x -L$(PSPSDK)/lib utils.o  eloader.o elf.o thread.o syscall.o memory.o lib.o sdk_hbl.o debug.o config.o modmgr.o malloc.o graphics.o font.o -o eloader.elf
 	$(PSPDEV)/bin/psp-strip -s eloader.elf
 	$(PSPDEV)/bin/psp-objcopy -O binary eloader.elf hbl.bin
 	
-loader: loader.o debug.o lib.o sdk_loader.o elf.o config.o linker_loader.x
-	$(PSPDEV)/bin/psp-ld -T linker_loader.x -L$(PSPSDK)/lib loader.o debug.o lib.o sdk_loader.o elf.o config.o -o loader.elf
+loader: loader.o debug.o lib.o sdk_loader.o elf.o config.o utils.o linker_loader.x
+	$(PSPDEV)/bin/psp-ld -T linker_loader.x -L$(PSPSDK)/lib loader.o debug.o lib.o sdk_loader.o elf.o config.o utils.o  -o loader.elf
 	$(PSPDEV)/bin/psp-strip -s loader.elf
 	$(PSPDEV)/bin/psp-objcopy -O binary loader.elf h.bin
