@@ -1,0 +1,9 @@
+#ifndef _UTILS_H_
+#define _UTILS_H_
+
+#include "sdk.h"
+
+u32 getFirmwareVersion();
+int file_exists(const char * filename);
+
+#endif
