@@ -1,3 +1,6 @@
+2010/04/17 (wololo)
+- Experimental!!! firmware detection mechanism. No need to rename libs_5xx and libs_6xx, as well as imports.config_* : the HBL automatically loads the "correct" one
+
 2010/04/16 (ultimakillz)
 - Added new imports.config files for 5.0x, 5.5x, 5.70 and 6.20 (PSP Go) versions (thanks to ultimakillz)
 
